2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed 'Bug 385456 - Code folding'.

2008-07-14  Mike Krüger <mkrueger@novell.com> 

	* JavascriptSyntaxMode.xml, XmlSyntaxMode.xml: Added java script syntax
	  mode (Bug 400896 - Syntax Mode for Javascript).

2008-07-08  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/ITooltipProvider.cs, Mono.TextEditor/TextEditor.cs:
	  Allow specifying the alignment of tooltips.

2008-07-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.TextEditor/ITooltipProvider.cs, Mono.TextEditor/TextEditor.cs:
	  Add support for "interactive" tooltips (tooltips which can have
	  interactive widgets).

2008-07-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/IXmlProvider.cs: Worked on style
	  support.

2008-07-06  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor.Highlighting/SyntaxModeService.cs,
	  Mono.TextEditor.Highlighting/IXmlProvider.cs: Added support for
	  custom styles.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* CSharpSyntaxMode.xml, XmlSyntaxMode.xml: fixed "Bug 405927 - Quotes
	  are mis-highlighted in C# XML comments".

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextViewMargin.cs: fixed 'Bug 405923 - After using
	  middle-click insertion, the document jumps back to the location of
	  the selection'.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextMarker.cs: fixed 'Bug 405919 - Error underlines
	  are sometimes painted over the line numbers and folding markers'.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextEditor.cs: fixed 'Bug 405913 - Drag-n-dropping
	  text should move text, not copy it'.

2008-07-04  Mike Krüger <mkrueger@novell.com> 

	* Mono.TextEditor/TextMarker.cs, Mono.TextEditor.Highlighting/Style.cs:
	  Added color styles for breakpoints.

2008-07-04  Mike Krüger <mkrueger@novell.com> 
